--- a/src/app/components/modals/app-modal/app-modal.component.html
+++ b/src/app/components/modals/app-modal/app-modal.component.html
@@ -1,7 +1,7 @@
 <!-- Modal Template -->
 <div
   class="modal fade"
-  id="{{divId}}"
+  id="{{ divId }}"
   tabindex="-1"
   role="dialog"
   aria-labelledby="title"
@@ -37,29 +37,32 @@
       <div class="modal-body">
         <!-- Tabs -->
         <ul id="tabs" class="nav nav-tabs">
-          <li class="nav-item" *ngFor="let item of navItems; let index=index">
+          <li class="nav-item" *ngFor="let item of navItems; let index = index">
             <a
-              class="nav-link {{index == 0 ? 'active' : ''}}"
+              class="nav-link {{ index == 0 ? 'active' : '' }}"
               data-toggle="tab"
-              [href]="item.href"
+              href="{{ '#' + item.href }}"
             >
-              {{item.title}}</a
+              {{ item.title }}</a
             >
           </li>
         </ul>
 
         <!-- Tab Panes -->
         <div class="tab-content mt-3">
-          <div class="tab-pane fade show active" id="websitesOverview">
-            <div class="container-fluid">
-                <ng-content></ng-content>
+          <div *ngFor="let item of navItems; let index = index">
+            <div
+              class="tab-pane fade show {{ index == 0 ? 'active' : '' }}"
+              id="{{ '#' + item.href }}"
+            >
+              <div class="container-fluid">
+                <ng-content {{item.href}}></ng-content>
+              </div>
             </div>
           </div>
           <!-- End of Overview Tab Pane -->
 
-          <div class="tab-pane fade" id="websiteRelatedSystems">
-            <table id="websitesRelSysTable"></table>
-          </div>
+          <div class="tab-pane fade" id="websiteRelatedSystems"></div>
         </div>
         <!-- End of Tab Panes -->
       </div>
