#72 saving working state, incomplete solution that does not render content

--- a/src/app/components/modals/websites-modal/websites-modal.component.html
+++ b/src/app/components/modals/websites-modal/websites-modal.component.html
@@ -4,7 +4,8 @@
   divId="websiteDetail"
   [navItems]="navItems"
 >
-  <div class="row">
+<!-- <ng-template #websitesOverview> -->
+  <div class="row" >
     <div class="col">
       <h4>Production Status</h4>
       <p>{{ website.production_status }}</p>
@@ -268,4 +269,12 @@
     <h4>Scans</h4>
     <table id="websiteScans"></table>
   </div>
+<!-- </ng-template>
+<ng-template #websiteRelatedSystems> </ng-template> -->
+<div id="websiteRelatedSystems">
+<h1 >HEYA!</h1>
+</div>
+
 </app-modal>
+
+
