--- a/src/app/components/modals/app-modal/app-modal.component.html
+++ b/src/app/components/modals/app-modal/app-modal.component.html
@@ -42,6 +42,7 @@
               class="nav-link {{ index == 0 ? 'active' : '' }}"
               data-toggle="tab"
               href="{{ '#' + item.href }}"
+              (click)="viewTab = item.href"
             >
               {{ item.title }}</a
             >
@@ -49,20 +50,19 @@
         </ul>
 
         <!-- Tab Panes -->
-        <div class="tab-content mt-3">
+        <div class="tab-content mt-3" [ngSwitch]="viewTab">
           <div *ngFor="let item of navItems; let index = index">
             <div
               class="tab-pane fade show {{ index == 0 ? 'active' : '' }}"
-              id="{{ '#' + item.href }}"
+              id="{{ item.href }}"
             >
               <div class="container-fluid">
-                <ng-content {{item.href}}></ng-content>
+                <!-- <ng-container [ngTemplateOutlet]="item.href" *ngSwitchCase="item.href"></ng-container> -->
+                <h2 *ngSwitchCase="item.href">{{index}}</h2>
               </div>
             </div>
           </div>
           <!-- End of Overview Tab Pane -->
-
-          <div class="tab-pane fade" id="websiteRelatedSystems"></div>
         </div>
         <!-- End of Tab Panes -->
       </div>
