#76, added definition button, content yet to be written

--- a/src/app/views/enterprise/serviceCategory/serviceCategory.component.html
+++ b/src/app/views/enterprise/serviceCategory/serviceCategory.component.html
@@ -36,7 +36,29 @@
   </div>
 
   <div class="card-body card-text justify-content-center">
+    <!-- Service Category Definition Popover -->
+    <div class="row justify-content-end">
+      <div class="col-auto">
+        <a
+          tabindex="0"
+          class="btn btn-sm btn-info text-white"
+          role="button"
+          data-toggle="popover"
+          data-trigger="focus"
+          data-placement="auto"
+          data-html="true"
+          title=""
+          data-content="TO BE WRITTEN"
+        >
+          Website Service Category Definition
+        </a>
+      </div>
+    </div>
     <!-- Main Table -->
-    <table id="serviceCategoryTable"></table>
+    <div class="row">
+      <div class="col-12">
+        <table id="serviceCategoryTable"></table>
+      </div>
+    </div>
   </div>
 </div>
