#76 updated naming to websiteServiceCategories that are used in the modal

--- a/src/app/components/modals/websites-modal/websites-modal.component.html
+++ b/src/app/components/modals/websites-modal/websites-modal.component.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-auto" id="websiteServiceCategories">
                   <span
-                    *ngFor="let sc of serviceCategories"
+                    *ngFor="let sc of websiteServiceCategories"
                     (click)="serviceCategoryClick(sc.service_category_id)"
                     (keydown.enter)="
                       serviceCategoryClick(sc.service_category_id)
