#76 renaming files and variables to denote websiteServiceCategories

--- a/src/app/views/enterprise/website-service-category/website-service-category.component.html
+++ b/src/app/views/enterprise/website-service-category/website-service-category.component.html
@@ -57,7 +57,7 @@
     <!-- Main Table -->
     <div class="row">
       <div class="col-12">
-        <table id="serviceCategoryTable"></table>
+        <table id="websiteServiceCategoryTable"></table>
       </div>
     </div>
   </div>
