#76 renamed ID field within query response, updated references in table service

--- a/src/app/components/modals/website-service-category-modal/website-service-category-modal.component.html
+++ b/src/app/components/modals/website-service-category-modal/website-service-category-modal.component.html
@@ -1,7 +1,7 @@
 <!-- Website Service Category Detail Modal -->
 <div
   class="modal fade"
-  id="serviceCategoryDetail"
+  id="websiteServiceCategoryDetail"
   tabindex="-1"
   role="dialog"
   aria-labelledby="websiteServiceCategoryTitle"
