#76, fixing table id inconsistencies

--- a/src/app/views/enterprise/website-service-category/website-service-category.component.html
+++ b/src/app/views/enterprise/website-service-category/website-service-category.component.html
@@ -3,7 +3,7 @@
     <h3 class="card-title col-12 mb-0">
       <span>
         <i class="fas fa-sitemap"></i>
-        GSA Service Categories List
+        GSA Website Service Categories List
       </span>
     </h3>
     <!-- Help Button -->
