--- a/src/app/components/modals/websites-modal/websites-modal.component.html
+++ b/src/app/components/modals/websites-modal/websites-modal.component.html
@@ -108,9 +108,15 @@
                 <div class="col-auto" id="websiteServiceCategories">
                   <span
                     *ngFor="let sc of websiteServiceCategories"
-                    (click)="serviceCategoryClick(sc.service_category_id)"
+                    (click)="
+                      websiteServiceCategoryClick(
+                        sc.website_service_category_id
+                      )
+                    "
                     (keydown.enter)="
-                      serviceCategoryClick(sc.service_category_id)
+                      websiteServiceCategoryClick(
+                        sc.website_service_category_id
+                      )
                     "
                     class="badge badge-info p-3 mr-2 pointer"
                     tabindex="0"
