#76 updated definition of website service categories

--- a/src/app/views/enterprise/website-service-category/website-service-category.component.html
+++ b/src/app/views/enterprise/website-service-category/website-service-category.component.html
@@ -48,7 +48,7 @@
           data-placement="auto"
           data-html="true"
           title=""
-          data-content="TO BE WRITTEN"
+          data-content="Website Service Categories draw connections between sites that serve similar themes. For instance, GSA supports both travel policy (OGP) and travel services (FAS) and maintains several websites that reference one or both. All teams across GSA that manage or reference a common content topic area (such as travel) need to communicate and coordinate around these service themes in order to provide the best customer experience in GSA's digital ecosystem."
         >
           Website Service Category Definition
         </a>
