--- a/src/app/components/modals/websites-modal/websites-modal.component.html
+++ b/src/app/components/modals/websites-modal/websites-modal.component.html
@@ -79,9 +79,10 @@
               <div class="row mb-3">
                 <div class="col-12">
                   <h4>Recent Screenshots</h4>
-                  <span>{{
-                    "As of " + websiteScans[0].scan_date | date : "mediumDate"
-                  }}</span>
+                  <span
+                    >As of:
+                    {{ websiteScans[0].scan_date | date : "mediumDate" }}</span
+                  >
                 </div>
                 <div class="col-12 col-md-8">
                   <img
